# agent-arena

./: .env.example  .gitignore  .mcp.json  ANALYSIS.md  CHANGELOG.md  CLI_RELEASE_CHECKLIST.md  CLOUDFLARE_INDEXER_URL.txt  CODEBASE_ANALYSIS.md  CODE_REVIEW.md  CODE_REVIEW_FINAL.md  CODE_REVIEW_v2.md  CONTRIBUTING.md  DEMO_GUIDE.md  DEPLOYED_INDEXER.txt  DEPLOYMENT_SUMMARY.md  DEPLOY_SUMMARY.md  DESIGN.md  DOCS_SUBMIT_GUIDE.md  ECOSYSTEM.md  FINAL_CODE_REVIEW.md  FINAL_REVIEW.md  FRONTEND_URL.txt  HACKATHON_CHECKLIST.md  LICENSE  MAINNET_DEPLOY.md  PRINCIPLE.md  PROJECT_STATUS.md  README.md  README.zh.md  STAKING.md  SUBMISSION.md  VISION.md  VISION2.md  hardhat.config.cjs  hardhat.config.js  package-lock.json  package.json  vercel.json
artifacts/: AgentArena.json
blueprint/: README.md
cache/: solidity-files-cache.json
cf-indexer/: README.md  package.json  wrangler.toml
cli/: README.md  package-lock.json  package.json
contracts/: AgentArena.sol
docs/: API.md  README.md  demo-day-script.md  openapi.yaml
frontend/: .env.local.example  CONTENT_AUDIT.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
indexer/: README.md  package-lock.json  package.json
indexer/service/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
indexer/service/abi/: AgentArena.json
indexer/service/migrations/: 001_initial.sql  002_add_last_seen.sql
indexer/service/src/: api.rs  config.rs  db.rs  indexer.rs  main.rs  models.rs  sync.rs
local-indexer/: README.md
mcp/: package.json  tsconfig.json
sdk/: README.md  (+3 more)
(+172 files in other folders)
