[package]
name = "agent-arena-indexer"
version = "0.1.0"
edition = "2021"
description = "Agent Arena Indexer Service - High-performance chain event indexer"
authors = ["DaviRain"]
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Ethereum / Web3
ethers = { version = "2.0", features = ["ws", "rustls"] }
alloy = { version = "0.4", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment & Config
dotenvy = "0.15"
config = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
sha3 = "0.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
once_cell = "1.19"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "indexer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true